fix: hide logo on setup screen properly and expand draft pitch horizontally on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -630,6 +630,9 @@ input[type=range] {
 
 /* Mobile Draft UI tweaks */
 @media (max-width: 767px) {
+    .game-content {
+        padding: 0.5rem 2.5%;
+    }
     .draft-container {
         flex-direction: column;
     }
